@@ -28,6 +28,7 @@ Changelog 0.7.0.1
 + Sally hangs when closing the app
 + MediaPlayer: file not found creates deadlock
 [NO-TICKET] SallyAPI: added new special key commands for arrow keys
+[NO-TICKET] SallyAPI: CFileBrowser: added methode to jump directly to a folder
 
 
 Changelog 0.6.6.1
